compiler/testData/diagnostics/tests/secondaryConstructors/superAnyNonEmpty.fir.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
class A {
    constructor(): <!INAPPLICABLE_CANDIDATE!>super<!>(1)
}
